	- gate("out")->size() does not work, because gate("out") throws an error ("not found") if out is a vector gate;
	  gate("out",0)->size() would work, but only if out[] is of nonzero size (otherwise "out[0] not found" error occurs).
	  Best is to use gateSize("out"), a cModule member function.
	- removed setTo(), setFrom() methods; use connectTo() instead!
	- dynamic gate creating changed:
	    - removed cGate::setOwnerModule() and setIndex()
	    - XXX describe what's instead

	Channels:
	- removed delay(), setDelay(), error(), setError(), dataRate(),
	  setDataRate() methods from cGate and cBasicChannel -- use generic
	  component parameter access instead (par("delay"), par("error"),
	  par("datarate"))
	- added cNullChannel, which does nothing.
	- breaking change in cBasicChannel behaviour: implicit queueing is no longer supported:
	  sending on a busy gate (when simTime() < gate->transmissionFinishes()) results in an
	  error. Thus, using a special transmitter module (with an internal queue) is now
	  sort of mandatory when channels with data rate are in use.
	- setting channel parameters from the ini file:
	   (1) make the parameter input, e.g.: 
	         a.out --> { delay=default(0); } --> b.in;
	   (2) add <fromgate-fullpath>.channel.<paramname> = <value> into the ini file, e.g.:
	         **.a.out.channel.delay = 10ms
	- TODO: make it easier to find the first gate with datarate (as g->transmissionFinishes()
	  is "non-transitive"). Add another method? or make transmissionFinishes() transitive?

	Dynamic module/channel creation:
	- finalizeParameters() must be called (for channels, this reads input params from omnetpp.ini;
	  for modules, also creates gates [since gate vector sizes may depend on parameter values])

	Exception handling changed:
	- now all our exceptions subclass from std::exception (e.g. cException extends std::exception)
	- exceptions are now thrown by value not by pointer (s/throw new/throw/g)